<resources>
    <string name="app_name">MovieMagazine</string>
    <string name="enter_email">Email Address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="forget_your_password">Forget Your Password ?</string>
    <string name="not_a_user_register_now_in_moviemagazine">Not a User? Register Now in MovieMagazine!</string>
    <string name="provide_us_your_registred_email_id_to_send_instructions_for_reseting_password">Provide us your Registred Email-id to send instructions for reseting Your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="return_to_login_activity">Return to Login Activity</string>
    <string name="register">Register</string>
    <string name="title_activity_categories">MovieMagazine</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="NoFavourites">No Favourites to Display</string>
    <string name="rating">Rating :</string>
    <string name="overview">Overview</string>
    <string name="trailers">Trailers</string>
    <string name="movie_title">Movie title</string>
    <string name="backdrop_image_will_be_displayed">backdrop image will be displayed</string>
    <string name="already_registred_then_login">Already registred? Then Login</string>
    <string name="trailer">trailer</string>
    <string name="please_check_ur_password">Please Check You Mail</string>
    <string name="email">Enter email address!</string>
    <string name="password">Enter password!</string>
    <string name="maxlengthpassword">Password too short, enter minimum 6 characters!</string>
    <string name="createremail_reg">createUserWithEmail:onComplete:</string>
    <string name="athentii_reg">Authentication failed.</string>
    <string name="arrow_rvapd"><![CDATA[-->]]></string>
    <string name="rating_moviinfo">Rating       :</string>
    <string name="addinfavor_movieinfo">Added To Favorites</string>
    <string name="removefav_movieinfo">Removed From Favorites</string>
    <string name="requiredmailid_ferpass">Enter your registered email id</string>
    <string name="inst_resetpass_forpass">We have sent you instructions to reset your password!</string>
    <string name="fail_reste_pass_forpass">Failed to send reset email!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="tv_shows">Tv_Shows</string>
    <string name="favourite">favourite</string>
    <string name="popular_main">popular</string>
    <string name="key_main">KEY</string>
    <string name="favouritesmain">favourites</string>
    <string name="topmain">top</string>
    <string name="lodin">Loading....</string>
    <string name="appmain">Movie Magazine</string>
    <string name="nofav">There is No Favourites</string>
    <string name="loding">Loading....</string>
    <string name="swipe_left_scroll">Swipe Left To Scroll</string>
    <string name="no_net">NO NETWORK CONNECTION</string>
    <string name="retry">Retry</string>
    <string name="reg">Registrstion Complete</string>
    <string name="to_unlock_his_account_by_entering_his_mailid">to unlock his account by entering his mailid</string>
    <string name="the_logout_image_on_fab_button_to_indicate_the_user_to_logout">the logout image on fab button to indicate the user to logout</string>
    <string name="using_to_add_favourits">using to add favourits</string>
    <string name="it_indicates_the_relese_date_for_popular_movies_and_first_air_free_date_fir_tv_shows">it indicates the relese date for popular movies and first air free date fir tv shows</string>
    <string name="it_indicates_the_overview_of_the_of_the_popular_movies_and_tv_shows">it indicates the overview of the of the popular movies and tv shows</string>
    <string name="it_indicates_the_movie_and_tvshows_trailers">it indicates the movie and tvshows trailers</string>
    <string name="reviews">Reviews</string>
    <string name="it_indicates_the_reviwes_for_popular_movies">it indicates the reviwes for popular movies</string>
    <string name="shows_the_posteer_for_popular_movies_and_tv_shows">shows the posteer for popular movies and tv shows</string>
    <string name="decribes_the_author">decribes the author</string>
    <string name="describes_the_trailers">describes the trailers</string>
    <string name="ok">ok</string>
    <string name="this_indicates_the_user_to_rester_or_add_his_particulars_to_registers">this indicates the user to rester or add his particulars to registers</string>
</resources>
