<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/blur2"
    android:padding="@dimen/paddin25sp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPassword">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dime200dp"
        android:id="@+id/id_unlock"
        android:contentDescription="@string/to_unlock_his_account_by_entering_his_mailid"
        android:src="@drawable/ic_lock_open_black_24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provide_us_your_registred_email_id_to_send_instructions_for_reseting_password"
        android:textColor="@color/PUREWHITE"
        android:textSize="@dimen/dime15sp"
        android:gravity="center"
        android:fontFamily="serif"/>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mtf_image="@mipmap/ic_email"
        android:layout_margin="@dimen/margin10dp"
        app:mtf_labelColor="@color/PUREWHITE"
        app:mtf_openKeyboardOnFocus="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:id="@+id/id_emailforget"
            android:hint="@string/enter_email"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/dime15sp" />
    </com.github.florent37.materialtextfield.MaterialTextField>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textAllCaps="false"
        android:textSize="@dimen/dime15sp"
        android:onClick="clciktoreset"
        android:id="@+id/id_button_Resetpassword"
        android:text="@string/reset_password"
        android:textColor="@color/PUREWHITE"
        android:background="@null"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_return"
        android:background="@null"
        android:fontFamily="serif"
        android:onClick="clickToReturn"
        android:textSize="@dimen/dime15sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/PUREWHITE"
        android:text="@string/return_to_login_activity"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/dime30dp"
            android:layout_height="@dimen/dime30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="@dimen/dime20dp"
            android:visibility="gone" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>