<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blur2"
    android:orientation="vertical"
    android:padding="@dimen/paddin25sp"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@mipmap/ic_email"
                app:mtf_labelColor="@color/PUREWHITE"
                app:mtf_openKeyboardOnFocus="true">

                <EditText
                    android:id="@+id/id_emaillogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/enter_email"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dime15sp" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_image="@mipmap/ic_password"
                app:mtf_labelColor="@color/PUREWHITE"
                app:mtf_openKeyboardOnFocus="true">
                <EditText
                    android:id="@+id/id_passwordlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:inputType="textPassword"
                    android:hint="@string/enter_your_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dime15sp" />
            </com.github.florent37.materialtextfield.MaterialTextField>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/paddin25sp">

                <Button
                    android:id="@+id/id_buttonlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10dp"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:onClick="clickLogin"
                    android:text="@string/login"
                    android:textColor="@color/PUREWHITE"
                    android:textSize="@dimen/dime15sp"
                    tools:ignore="OnClick" />

                <Button
                    android:id="@+id/id_buttonforgetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10dp"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:onClick="clickForgetPassword"
                    android:text="@string/forget_your_password"
                    android:textAllCaps="false"
                    android:textColor="@color/PUREWHITE"
                    android:textSize="@dimen/dime15sp"
                    tools:ignore="OnClick" />

                <Button
                    android:id="@+id/id_buttonnewuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10dp"
                    android:background="@null"
                    android:fontFamily="serif"
                    android:onClick="clickNewUser"
                    android:text="@string/not_a_user_register_now_in_moviemagazine"
                    android:textAllCaps="false"
                    android:textColor="@color/PUREWHITE"
                    android:textSize="@dimen/dime15sp"
                    tools:ignore="OnClick" />
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>